[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.6.0-dev"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
documentation = "https://docs.mun-lang.org/v0.4"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[workspace.dependencies]
annotate-snippets = { version = "0.10.2", default-features = false }
anyhow = { version = "1.0.93", default-features = false }
apple-codesign = { version = "0.29.0", default-features = false }
array-init = { version = "2.1.0", default-features = false }
bitflags = { version = "2.6.0", default-features = false }
by_address = { version = "1.2.1", default-features = false }
bytecount = { version = "0.6.8", default-features = false }
bytemuck = { version = "1.20.0", default-features = false }
cargo-husky = { version = "1", default-features = false }
cbindgen = { version = "0.24.5", default-features = false }
clap = { version = "4.5.21", default-features = false }
crossbeam-channel = { version = "0.5.13", default-features = false }
ctrlc = { version = "3.4", default-features = false }
difference = "2.0"
drop_bomb = { version = "0.1.5", default-features = false }
either = { version = "1.13.0", default-features = false }
ena = { version = "0.14", default-features = false }
extendhash = { version = "1.0.10", default-features = false }
heck = "0.4.1"
inkwell = { version = "0.2.0", default-features = false }
insta = { version = "1.41.1", default-features = false }
itertools = { version = "0.12.1", default-features = false }
la-arena = { version = "0.3.1", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
libloading = { version = "0.8.6", default-features = false }
lld_rs = { version = "140.0.0", default-features = false }
lockfile = { version = "0.4.0", default-features = false }
log = { version = "0.4.22", default-features = false }
lsp-server = { version = "0.7.7", default-features = false }
lsp-types = { version = "=0.95.0", default-features = false }
mdbook = { version = "0.4.43", default-features = false }
once_cell = { version = "1.20.2", default-features = false }
parking_lot = { version = "0.12.3", default-features = false }
paste = { version = "1.0.15", default-features = false }
pretty_env_logger = { version = "0.5.0", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
pulldown-cmark = { version = "0.9.6", default-features = false }
quote = { version = "1.0", default-features = false }
ra_ap_text_edit = { version = "0.0.190", default-features = false }
relative-path = { version = "1.9", default-features = false }
ron = "0.8.1"
rowan = { version = "0.15.16", default-features = false }
rustc-hash = { version = "1.1.0", default-features = false }
salsa = { version = "0.16.1", default-features = false }
semver = { version = "1.0", default-features = false }
seq-macro = { version = "0.3.5", default-features = false }
serde = { version = "1.0.215", default-features = false }
serde_derive = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
smallvec = { version = "1.13.2", default-features = false }
smol_str = { version = "0.2.2", default-features = false }
syn = { version = "2.0", default-features = false }
tempdir = { version = "0.3.7", default-features = false }
tempfile = { version = "3.14", default-features = false }
tera = { version = "1.20.0", default-features = false }
termcolor = { version = "1.4", default-features = false }
text-size = { version = "1.1.1", default-features = false }
text_trees = { version = "0.1.2", default-features = false }
thiserror = { version = "1.0.69", default-features = false }
threadpool = { version = "1.8.1", default-features = false }
toml = { version = "0.8.19", default-features = false }
unicode-xid = { version = "0.2.6", default-features = false }
walkdir = { version = "2.5.0", default-features = false }
yansi-term = { version = "0.1.2", default-features = false }
notify = { version = "5.2.0" }
winapi = { version = "0.3.9", default-features = false }

[workspace.lints.clippy]
all = "warn"
await_holding_lock = "warn"
bool-to-int-with-if = "warn"
cast_lossless = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
debug_assert_with_mut_call = "warn"
default_trait_access = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if-not-else = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
items-after-statements = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual-assert = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_closure_for_method_calls = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
wildcard-imports = "warn"
zero_sized_map_values = "warn"

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[profile.dev]
rpath = true

[profile.release]
rpath = true
