[package]
name = "mun"
version = "0.6.0-dev"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Command-line interface for compiling, monitoring and running Mun code"
documentation = "https://docs.mun-lang.org/v0.4"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["command-line-interface", "game-development", "mun"]
default-run = "mun"

[dependencies]
anyhow = { version = "1.0.75", default-features = false }
clap = { version = "4.4.11", default-features = false, features = ["std", "derive"] }
log = { version = "0.4", default-features = false }
pretty_env_logger = { version = "0.5.0", default-features = false }
mun_abi = { version = "0.6.0-dev", path = "../mun_abi" }
mun_compiler = { version = "0.6.0-dev", path = "../mun_compiler" }
mun_compiler_daemon = { version = "0.6.0-dev", path = "../mun_compiler_daemon" }
mun_runtime = { version = "0.6.0-dev", path = "../mun_runtime" }
mun_language_server = { version = "0.6.0-dev", path = "../mun_language_server" }
mun_project = { version = "0.6.0-dev", path = "../mun_project" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy", "run-for-all"]

[dev-dependencies]
tempfile = "3.8"
mun_skeptic = { path = "../mun_skeptic", version = "0.6.0-dev" }

[build-dependencies]
mun_skeptic = { path = "../mun_skeptic", version = "0.6.0-dev" }
