[package]
name = "mun"
description = "Command-line interface for compiling, monitoring and running Mun code"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["command-line-interface", "game-development"]
default-run = "mun"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["std", "derive"] }
log = { workspace = true }
pretty_env_logger = { workspace = true }
mun_abi = { version = "0.6.0-dev", path = "../mun_abi" }
mun_compiler = { version = "0.6.0-dev", path = "../mun_compiler" }
mun_compiler_daemon = { version = "0.6.0-dev", path = "../mun_compiler_daemon" }
mun_runtime = { version = "0.6.0-dev", path = "../mun_runtime" }
mun_language_server = { version = "0.6.0-dev", path = "../mun_language_server" }
mun_project = { version = "0.6.0-dev", path = "../mun_project" }

[dev-dependencies]
cargo-husky = { workspace = true, features = ["user-hooks"] }
tempfile = { workspace = true }
mun_skeptic = { path = "../mun_skeptic", version = "0.6.0-dev" }

[build-dependencies]
mun_skeptic = { path = "../mun_skeptic", version = "0.6.0-dev" }

[lints]
workspace = true
