[package]
name = "mun_abi"
version = "0.4.0-dev"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Rust wrapper for the Mun ABI"
documentation = "https://docs.mun-lang.org/v0.3"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["api-bindings", "game-development", "mun"]

[dependencies]
once_cell = "1.4.0"
itertools = { version = "0.10.3", default-features = false }
parking_lot = { version = "0.12.0", default-features = false }
extendhash = { version = "1.0.9", default-features = false }
serde = { version = "1.0.137", default-features = false, optional = true }
