[package]
name = "mun_abi"
description = "Rust wrapper for the Mun ABI"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["api-bindings", "game-development"]
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
once_cell = { workspace = true, features = ["std", "critical-section"] }
itertools = { workspace = true }
parking_lot = { workspace = true }
extendhash = { workspace = true }
serde = { workspace = true, optional = true }
